[package]
name = "cxns64"
version = "0.0.4"
edition = "2024"
authors = ["Pavel Pleskunov"]
description = "A lightweight implementation of 64-bit complex numbers for Rust"
homepage = "https://github.com/pleskunov/cxns64"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science"]
repository = "https://github.com/pleskunov/cxns64"
readme = "README.md"
exclude = ["/ci/*", "/.github/*"]
rust-version = "1.94"

[dependencies]
